--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
   id 'org.springframework.boot' version '2.2.6.RELEASE'
   id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+  id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
   id 'java'
 }
 
@@ -24,6 +25,8 @@ repositories {
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+  implementation 'com.querydsl:querydsl-jpa'
+  implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.6.1'
   implementation 'org.springframework.boot:spring-boot-starter-web'
   compileOnly 'org.projectlombok:lombok'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -40,3 +43,20 @@ dependencies {
 test {
   useJUnitPlatform()
 }
+
+//querydsl 추가 시작
+def querydslDir = "$buildDir/generated/querydsl"
+querydsl {
+  jpa = true
+  querydslSourcesDir = querydslDir
+}
+sourceSets {
+  main.java.srcDir querydslDir
+}
+configurations {
+  querydsl.extendsFrom compileClasspath
+}
+compileQuerydsl {
+  options.annotationProcessorPath = configurations.querydsl
+}
+//querydsl 추가 끝
