--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,4 +17,5 @@ spring:
       hibernate:
 #        dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
+        use_sql_comments: true
     open-in-view: false
