--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,13 +3,13 @@ logging:
     console: '%clr(%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%logger{39}:%L){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}'
   level:
     org.hibernate.SQL: debug
-#    org.hibernate.type: trace
+    org.hibernate.type.descriptor.sql.BasicBinder: trace
 
 spring:
-  datasource:
-    username: sa
-    url: jdbc:h2:tcp://localhost/~/querydsl
-    driver-class-name: org.h2.Driver
+#  datasource:
+#    username: sa
+#    url: jdbc:h2:tcp://localhost/~/querydsl
+#    driver-class-name: org.h2.Driver
   jpa:
     hibernate:
       ddl-auto: create
@@ -17,4 +17,7 @@ spring:
       hibernate:
 #        dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
+#        use_sql_comments: true
     open-in-view: false
+  profiles:
+    active: test
